@@ -4,7 +4,7 @@ APP_NAME=ms-fruits-1.0-SNAPSHOT
 
 rm -f tpid
 
-nohup java -Dspring.profiles.active=pro -jar ../target/$APP_NAME.jar > /dev/null 2>&1 &
+nohup java -XX:PermSize=128m -XX:MaxPermSize=128m -Dspring.profiles.active=pro -jar ../target/$APP_NAME.jar > /dev/null 2>&1 &
 
 echo $! > tpid
 
